--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@swimlane/ngx-charts": "10.0.0",
     "@swimlane/ngx-datatable": "^14.0.0",
     "@swimlane/ngx-dnd": "6.0.0",
+    "@syncfusion/ej2-angular-richtexteditor": "^17.4.49",
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.26.4",
     "angular-in-memory-web-api": "0.8.0",
