--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.3.0",
     "ngx-cookie-service": "2.1.0",
+    "ngx-spinner": "^7.2.0",
     "node-sass": "^4.13.1",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.15.0",
